apps/vitess-docs-kr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitess-docs-kr
  namespace: haenu
  labels:
    app: vitess-docs-kr
spec:
  selector:
    matchLabels:
      app: vitess-docs-kr
  template:
    metadata:
      labels:
        app: vitess-docs-kr
    spec:
      containers:
      - name: vitess-docs-kr
        image: hyeonwoo5342/vitess-docs-kr:4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '140Mi'
            cpu: '60m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
